--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,29 @@
 body {
     text-align: center;
+    margin: 0;
   }
 
   nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
   }
 
   a {
     color: white;
     margin: 40px;
+    padding: 25px;
   }
 
   h1 {
-    color: steelblue;
+    color: steelblue; text-align: center;
   }
+
+  h1 {
+    margin: 50px 0;
+}
   img {
     width: 800px;
-    border: 4px solid steelblue;
+    border: 10px solid steelblue;
   }
   p {
     padding: 10px;
@@ -26,3 +32,6 @@ body {
     background-color: steelblue;
     color: white;
   }
+  footer p {
+    padding: 25px;
+}
