--- a/wwr/positioning/positionstyles.css
+++ b/wwr/positioning/positionstyles.css
@@ -51,6 +51,8 @@
   background-color: green; 
   grid-column: 2/4;
   grid-row: 2/4;
+  
+
 } 
 .yellow2 {
   width: 100px; 
@@ -112,7 +114,7 @@
   display:grid ;
   grid-template-columns: 1fr 1fr;
   justify-items: center;  
-  grid-gap: 0px;
+ 
 
 }
 .red4 {
@@ -161,7 +163,7 @@
   background-color: green;   
   grid-row: 2/3;
   grid-column:1/3 ;
-
+  float: left;
 } 
 .yellow5 {
   width: 500px; 
@@ -170,6 +172,7 @@
   grid-column: 1/3;
   grid-row: 2/5; 
   justify-self: right;
+
 
 } 
 .blue5 {
@@ -193,6 +196,7 @@
   background-color: red; 
   grid-row: 1/3;
   grid-column: 1/5;
+  
 } 
 .green6 {
   width: 200px; 
@@ -200,6 +204,7 @@
   background-color: green; 
   grid-row: 5/7;
   grid-column: 1/3;
+  z-index: 100;
 } 
 .yellow6 {
   width: 200px; 
@@ -207,6 +212,7 @@
   background-color: gold; 
   grid-column: 4/7;
   grid-row: 3/7;
+  z-index: 100;
 
 } 
 .blue6 {
@@ -215,6 +221,7 @@
   background-color: blue; 
   grid-row: 2/6;
   grid-column: 2/6;
+
 } 
 
 
