--- a/wwr/styles/style_2.css
+++ b/wwr/styles/style_2.css
@@ -1,16 +1,9 @@
 
 body {
-    
     background-color: #f5efef; 
     font-size: 22px;
     margin: 0;
     padding: 0;
-}
-
-main{ 
-    text-align: center;
-    
-
 }
 
 
@@ -22,21 +15,22 @@ main{
     
 }
 
-.button-box{
-    text-align: center;
-
-}
 .book, .join   {padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
+
     background-color: #d9c2a3;
+
     color: black;
-    text-decoration: underline;
-    font-size: 18px;    
+    text-decoration: none;
+    font-size: 18px;
+    
  
 }
  .logo{
-    width: 80px;     
+
+    width: 80px;
+     
 }
 
 .icon {
@@ -45,18 +39,20 @@ main{
 
 .msg p  { padding-bottom: 15px;}
 
-
- 
-.home-title  { margin-top: 10px;
-    color: white;
-    font-family:'Rock Salt', 'Bradley Hand', sans-serif;;
+footer   {padding: 25px 50px;
+    margin-top: 200px;
 }
+footer .social img {  padding-top: 15px;}
  
+.home-title  { margin-top: 10px;}
+ 
+
+
 
 
 h2  {
 margin: 0;
-font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+font-family: Verdana, sans-serif;
 color: rgba(8, 0, 0, 0.948);
 
 }
@@ -73,7 +69,6 @@ color: rgba(8, 0, 0, 0.948);
     
 }
 
-
 .msg h2{
 
     color: white;
@@ -86,43 +81,33 @@ color: rgba(8, 0, 0, 0.948);
 }
 header {
     text-align: center;
-    background-color:rgba(20,30,13, .7);    
+    background-color:rgba(241, 230, 167, 0.7);
     display: grid;
     grid-template-columns: 150px auto;
-   
-
+  
 }
-
-#hero {
-    margin: 0%;
-
-}
-
 nav a:hover {
-    background-color: black;
+    background-color: rgb(255, 253, 253);
     color:#f5efef
-    
 }
 nav{
     display: flex;
-    justify-content: space-around;
-    padding-top: 20px;
-
-}
-
-
+    justify-content: space-around;}
 
 :content
 nav a {
     text-align: center;
-    color:white;
-    text-decoration: underline;
+    color: #181918;
+    text-decoration: none;
     padding: 35px;
-   
 }    
-
+  
  
-
+#background {
+    height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
 
 .mountains{
    
@@ -130,79 +115,46 @@ nav a {
     box-shadow: 5px 5px 10px #6f7364;
     grid-column: 2/7;
     grid-row: 5/8;
-    width: 100%; 
-    
+    width: 100%;
+
+ 
 }
 
 footer p {
-    font-size: .6em;
+    font-size: 1.2em;
     text-align: center;
     background-color: #6f7364;
-    padding: 25px 10px;    
-    width: 100%;
-    height: 100px;
-    color: #d9c2a3;
-    
-} 
-.social{
-    background-color: #6f7364;
-    padding: 25px 10px;
-    margin-top: 0px;
-    width: 100%;
-    height: 100px;
-    text-decoration: none;
-
-}
-
-footer{
+    padding: 25px 50px;
+    margin-top: 200px;
     display: flex;
     justify-content: space-around;
-    align-items:center;
-    padding: 25px 10px ; 
-    height: 100%;
-    margin-top: 100px;
-    text-decoration: underline;
-
-}
-
-footer .social img {  padding-top: 15px;}
-
-footer p a:hover {
-    
-    color: white;
-  
+    align-items: center;
 } 
 
 div  { text-align: center;
+
 
 }
 
 div ::content
 {
-    margin: 0 auto;
- max-width: 1600 px;
+
+ max-width: 900 px;
 
 }
 
 .home-grid{
-    
+
     text-align: center;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    
-   
-   
+
 }
-
-
-
-
-
 
 .card-img {
 
 width: 100%;
-border: 10px solid #c9c09b;
+border: 10px solid #479ba6;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
     
@@ -215,37 +167,26 @@ border: 10px solid #c9c09b;
 main section img {
     box-sizing: border-box;
 }
-
+footer p a:hover {
+    text-decoration: underline;
+    
+}   
 
 #hero{
-    columns: white;
+
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;   
-    margin-top: 0px; 
-    width: 100%;
+    margin-top: 100px; 
 }
 #hero-box {
-    
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
-    
-    
 }
 #hero-msg{
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
-   
-}
-
-#hero-msg h1,h4{
-        text-align: center;}
-
-
-hero-img{
-
-    width: 100%;
 
 }
 
@@ -268,51 +209,3 @@ hero-img{
     margin: 200px 0;
    
    }
-
-
-
-
-   @media screen and (max-width: 900px)
-    {
-
-        
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-    }
-}
